# english-compressor

./: CHANGELOG.md  README.md  compressed  english-compressor.cabal
src/: Main.hs  Parser.hs
