cabal-version:      3.0
name:               english-compressor
version:            0.1.0.0
-- synopsis:
-- description:
license:            GPL-3.0-only
license-file:       LICENSE
author:             Harshit Panthi
maintainer:         harshitpanthi2006@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable english-compressor
    import:           warnings
    main-is:          Main.hs
    other-modules: Parser
    -- other-extensions:
    build-depends:    base ^>=4.20.2.0
                    , containers
                    , heaps
                    , vector
                    , megaparsec
                    , text
                    , bitvec
                    , bytestring
    hs-source-dirs:   src
    default-language: GHC2024
